Fixed problem, leaking elements out of screen

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .App {
   width: 100vw;
+  overflow: hidden;
 }
 
 li {
